catkin_ws/logs/iq_gnc/build.make.009.log
[35m[1mScanning dependencies of target avoidance_sol[0m
[ 33%] Built target gnc_example
[ 50%] [32mBuilding CXX object CMakeFiles/avoidance_sol.dir/src/avoidance_sol.cpp.o[0m
[ 83%] Built target square
/home/thelinux/catkin_ws/src/iq_gnc/src/avoidance_sol.cpp: In function ‘int main(int, char**)’:
/home/thelinux/catkin_ws/src/iq_gnc/src/avoidance_sol.cpp:79:46: error: expected ‘;’ before ‘set_destination’
   79 |  std::cout << "moving towards waypoint RED\n"
      |                                              ^
      |                                              ;
   80 |  set_destination(-90,0,2,0);
      |  ~~~~~~~~~~~~~~~                              
make[2]: *** [CMakeFiles/avoidance_sol.dir/build.make:63: CMakeFiles/avoidance_sol.dir/src/avoidance_sol.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:215: CMakeFiles/avoidance_sol.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
